--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Giới thiệu bản thân - Vũ Minh Chiến</title>
+    <link rel='stylesheet' src='style.css'>
 </head>
 <body>
     <h1>Giới thiệu bản thân - Vũ Minh Chiến</h1>
