--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Giới thiệu bản thân - Vũ Minh Chiến</title>
-    <link rel='stylesheet' src='style.css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Giới thiệu bản thân</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Giới thiệu bản thân - Vũ Minh Chiến</h1>
