--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2>Thông tin liên hệ</h2>
     <ul>
         <li><strong>Email:</strong> <a href="mailto:vuminhchiennb2007@gmail.com"></a>vuminhchiennb2007@gmail.com</li>
-        <li><strong>Facebook:</strong> <a href="https://www.facebook.com/chienbry/.wae" target="_blank">Vũ Minh Chiến</a></li>
+        <li><strong>Facebook:</strong> <a href="https://www.facebook.com/chienbry" target="_blank">Vũ Minh Chiến</a></li>
     </ul>
 
     
@@ -34,7 +34,7 @@
 
     <h3>Video yêu thích</h3>
     <video width="320" height="240" controls>
-        <source src="src/videp\o.mp4">
+        <source src="src/video.mp4">
     </video>
 
 </body>
