--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><strong>Trường:</strong> THPT Yên Mô B</li>
                 <li><strong>Lớp:</strong>12A1</li>
                 <li><strong>Sở thích:</strong> Đọc sách, chơi thể thao</li>
-                <li><strong>Email:</strong> <a href="mailto:vuminhchiennb2007@gmail.com"></a>vuminhchiennb2007@gmail.com</li>
+                <li><strong>Email:</strong> <a href="mailto:vuminhchiennb2007@gmail.com">vuminhchiennb2007@gmail.com</a></li>
                 <li><strong>Facebook:</strong> <a href="https://www.facebook.com/chienbry" target="_blank">Vũ Minh Chiến</a></li>
             </ul>
         </div>
@@ -45,10 +45,7 @@
     <div class="video">
         <div class="container">
             <h2>Video yêu thích</h2>
-            <video controls width="100%" height="auto">
-                <source src="src/video.mp4" type="video/mp4">
-                Trình duyệt của bạn không hỗ trợ video.
-            </video>
+           <video src="src/video.mp4" controls style='width="320" height="240"'></video>
         </div>
     </div>
 </body>
